dynamix/force-app/main/default/objects/Demand__c/fields/Account_Name_For_MT__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_For_MT__c</fullName>
    <formula>Booking__r.Related_Opportunity__r.Account.FirstName + Booking__r.Related_Opportunity__r.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name For MT</label>
    <type>Text</type>
</CustomField>