dynamix/force-app/main/default/objects/Demand__c/fields/Account_Salutation_For_MT__c.field-meta.xml
<CustomField>
    <fullName>Account_Salutation_For_MT__c</fullName>
    <formula>Text(Booking__r.Related_Opportunity__r.Account.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Salutation For MT</label>
    <type>Text</type>
</CustomField>