dynamix/force-app/main/default/objects/Demand__c/fields/Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance Amount</label>
    <type>Checkbox</type>
</CustomField>