dynamix/force-app/main/default/objects/Demand__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Demand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>