dynamix/force-app/main/default/objects/Demand__c/fields/Amount_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Calculated__c</fullName>
    <formula>Amount__c -  Credit_s_Received_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Without GST</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>