dynamix/force-app/main/default/objects/Demand__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <label>Amount Received</label>
    <summarizedField>Invoice__c.Amount_Received__c</summarizedField>
    <summaryForeignKey>Invoice__c.Demand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>