dynamix/force-app/main/default/objects/Demand__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted To CRM TL</fullName>
            </value>
            <value>
                <fullName>Rejected By CRM TL</fullName>
            </value>
            <value>
                <fullName>Approved By CRM TL</fullName>
            </value>
            <value>
                <fullName>Rejected By Finance Executive</fullName>
            </value>
            <value>
                <fullName>Approved By Finance Executive</fullName>
            </value>
            <value>
                <fullName>Rejected By CFO</fullName>
            </value>
            <value>
                <fullName>Approved By CFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>