dynamix/force-app/main/default/objects/Demand__c/fields/Approval_Status_formula__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_formula__c</fullName>
    <formula>TEXT(Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>