dynamix/force-app/main/default/objects/Demand__c/fields/Billed_Milestone_name__c.field-meta.xml
<CustomField>
    <fullName>Billed_Milestone_name__c</fullName>
    <label>Billed Milestone name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>