dynamix/force-app/main/default/objects/Demand__c/fields/Billied_Milestone_JSON__c.field-meta.xml
<CustomField>
    <fullName>Billied_Milestone_JSON__c</fullName>
    <label>Billied Milestone JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>