dynamix/force-app/main/default/objects/Demand__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>