dynamix/force-app/main/default/objects/Demand__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milestone Based</fullName>
                <default>true</default>
                <label>Milestone Based</label>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Holding</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>