dynamix/force-app/main/default/objects/Demand__c/fields/CFO__c.field-meta.xml
<CustomField>
    <fullName>CFO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CFO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demands2</relationshipName>
    <type>Lookup</type>
</CustomField>