dynamix/force-app/main/default/objects/Demand__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <formula>GST_Calculated__c /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>