dynamix/force-app/main/default/objects/Demand__c/fields/Correspondence_Address__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Address__c</fullName>
    <formula>IF( ISBLANK( Booking__r.Related_Opportunity__r.Account.ShippingCity ) &amp;&amp; ISBLANK( Booking__r.Related_Opportunity__r.Account.ShippingStreet ) &amp;&amp; ISBLANK(Booking__r.Related_Opportunity__r.Account.ShippingPostalCode),
Booking__r.Related_Opportunity__r.Account.ShippingStreet, Booking__r.Related_Opportunity__r.Account.BillingStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correspondence Address</label>
    <type>Text</type>
</CustomField>