dynamix/force-app/main/default/objects/Demand__c/fields/Credit_Notes_JSON__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notes_JSON__c</fullName>
    <label>Credit Notes JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>