dynamix/force-app/main/default/objects/Demand__c/fields/Credit_s_Received__c.field-meta.xml
<CustomField>
    <fullName>Credit_s_Received__c</fullName>
    <formula>Credit_s_Received_Amount__c +  Credit_s_Received_GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit&apos;s Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>