dynamix/force-app/main/default/objects/Demand__c/fields/Credit_s_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_s_Received_Amount__c</fullName>
    <label>Credit&apos;s Received Amount</label>
    <summarizedField>Invoice__c.Amount_Credit_Note__c</summarizedField>
    <summaryForeignKey>Invoice__c.Demand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>