dynamix/force-app/main/default/objects/Demand__c/fields/CRM_TL__c.field-meta.xml
<CustomField>
    <fullName>CRM_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>