dynamix/force-app/main/default/objects/Demand__c/fields/CURRENT_TAX_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>CURRENT_TAX_AMOUNT__c</fullName>
    <label>CURRENT_TAX_AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>