dynamix/force-app/main/default/objects/Demand__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>225</length>
    <type>Text</type>
</CustomField>