dynamix/force-app/main/default/objects/Demand__c/fields/DEMAND_AGAINST__c.field-meta.xml
<CustomField>
    <fullName>DEMAND_AGAINST__c</fullName>
    <label>DEMAND_AGAINST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allotment</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
            <value>
                <fullName>Over Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>