dynamix/force-app/main/default/objects/Demand__c/fields/Demand_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Demand_Due_Date__c</fullName>
    <formula>if(TEXT(Category__c) == &apos;Milestone Based&apos;,if( Advance_Amount__c == true,Demand_Generation_Date__c, Demand_Generation_Date__c + 15 ),Demand_Generation_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Demand Due Date</label>
    <type>Date</type>
</CustomField>