dynamix/force-app/main/default/objects/Demand__c/fields/Demand_Due_Dates__c.field-meta.xml
<CustomField>
    <fullName>Demand_Due_Dates__c</fullName>
    <formula>if( DAY(Demand_Due_Date__c) &lt; 10, &apos;0&apos;+TEXT(DAY(Demand_Due_Date__c)) ,TEXT(DAY(Demand_Due_Date__c)) )+&quot;/&quot; + if( MONTH(Demand_Due_Date__c) &lt; 10, &apos;0&apos;+TEXT(MONTH(Demand_Due_Date__c)) ,TEXT(MONTH(Demand_Due_Date__c)) ) +&quot;/&quot;+TEXT(YEAR(Demand_Due_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Due Dates</label>
    <type>Text</type>
</CustomField>