dynamix/force-app/main/default/objects/Demand__c/fields/Demand_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Demand_Generation_Date__c</fullName>
    <formula>Demand_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Demand Generation Date</label>
    <type>Date</type>
</CustomField>