dynamix/force-app/main/default/objects/Demand__c/fields/Demand_Letter_Generation__c.field-meta.xml
<CustomField>
    <fullName>Demand_Letter_Generation__c</fullName>
    <formula>Demand_Due_Date__c + 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Demand Letter Generation</label>
    <type>Date</type>
</CustomField>