dynamix/force-app/main/default/objects/Demand__c/fields/DEMAND_LETTER_NO__c.field-meta.xml
<CustomField>
    <fullName>DEMAND_LETTER_NO__c</fullName>
    <label>DEMAND_LETTER_NO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>