dynamix/force-app/main/default/objects/Demand__c/fields/Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>Demand_Status__c</fullName>
    <label>Demand Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Unpaid</fullName>
                <isActive>false</isActive>
                <label>Unpaid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>