dynamix/force-app/main/default/objects/Demand__c/fields/DEMAND_VALUE_RECEIVED__c.field-meta.xml
<CustomField>
    <fullName>DEMAND_VALUE_RECEIVED__c</fullName>
    <label>DEMAND VALUE RECEIVED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>