dynamix/force-app/main/default/objects/Demand__c/fields/Document_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Dispatch_Date__c</fullName>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Document Dispatch Date</label>
    <type>Date</type>
</CustomField>