dynamix/force-app/main/default/objects/Demand__c/fields/ERP_Booking_HDR_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Booking_HDR_Id__c</fullName>
    <externalId>true</externalId>
    <label>ERP Booking HDR Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>