dynamix/force-app/main/default/objects/Demand__c/fields/Finance_Executive__c.field-meta.xml
<CustomField>
    <fullName>Finance_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demands1</relationshipName>
    <type>Lookup</type>
</CustomField>