dynamix/force-app/main/default/objects/Demand__c/fields/Forfeiture_Release_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Release_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forfeiture &amp; Release Letter Sent</label>
    <type>Checkbox</type>
</CustomField>