dynamix/force-app/main/default/objects/Demand__c/fields/Forfeiture_Release_Letter_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Release_Letter_Start_Date__c</fullName>
    <formula>Letter_for_Cancellation_Start_Date__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Forfeiture &amp; Release Letter Start Date</label>
    <type>Date</type>
</CustomField>