dynamix/force-app/main/default/objects/Demand__c/fields/GPA_SERVICE_TAX_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>GPA_SERVICE_TAX_NUMBER__c</fullName>
    <label>GPA_SERVICE_TAX_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>