dynamix/force-app/main/default/objects/Demand__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST</label>
    <summarizedField>Invoice__c.Gst__c</summarizedField>
    <summaryForeignKey>Invoice__c.Demand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>