dynamix/force-app/main/default/objects/Demand__c/fields/GST_Calculated__c.field-meta.xml
<CustomField>
    <fullName>GST_Calculated__c</fullName>
    <formula>GST__c -  Credit_s_Received_GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>