dynamix/force-app/main/default/objects/Demand__c/fields/GST_Received__c.field-meta.xml
<CustomField>
    <fullName>GST_Received__c</fullName>
    <label>GST Received</label>
    <summarizedField>Invoice__c.GST_Received__c</summarizedField>
    <summaryForeignKey>Invoice__c.Demand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>