dynamix/force-app/main/default/objects/Demand__c/fields/Interest_SAP__c.field-meta.xml
<CustomField>
    <fullName>Interest_SAP__c</fullName>
    <label>Interest (SAP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>