dynamix/force-app/main/default/objects/Demand__c/fields/Invoice_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_SAP_Code__c</fullName>
    <formula>Sap_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice SAP Code</label>
    <type>Text</type>
</CustomField>