dynamix/force-app/main/default/objects/Demand__c/fields/Invoices_JSON__c.field-meta.xml
<CustomField>
    <fullName>Invoices_JSON__c</fullName>
    <label>Invoices JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>