dynamix/force-app/main/default/objects/Demand__c/fields/IVR_For_DEMAND_DUE_DATE__c.field-meta.xml
<CustomField>
    <fullName>IVR_For_DEMAND_DUE_DATE__c</fullName>
    <label>IVR For DEMAND DUE DATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>