dynamix/force-app/main/default/objects/Demand__c/fields/Last_and_final_opportunity_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_and_final_opportunity_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last and final opportunity Sent</label>
    <type>Checkbox</type>
</CustomField>