dynamix/force-app/main/default/objects/Demand__c/fields/Last_and_final_opportunity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_and_final_opportunity_Start_Date__c</fullName>
    <formula>Demand_Letter_Generation__c + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Last and final opportunity Start Date</label>
    <type>Date</type>
</CustomField>