dynamix/force-app/main/default/objects/Demand__c/fields/LETTER_DATE__c.field-meta.xml
<CustomField>
    <fullName>LETTER_DATE__c</fullName>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>LETTER_DATE</label>
    <type>Date</type>
</CustomField>