dynamix/force-app/main/default/objects/Demand__c/fields/Letter_for_cancellation_End_period_date__c.field-meta.xml
<CustomField>
    <fullName>Letter_for_cancellation_End_period_date__c</fullName>
    <formula>Demand_Letter_Generation__c + 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter for cancellation End period date</label>
    <type>Date</type>
</CustomField>