dynamix/force-app/main/default/objects/Demand__c/fields/Letter_for_Cancellation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Letter_for_Cancellation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter for Cancellation Sent</label>
    <type>Checkbox</type>
</CustomField>