dynamix/force-app/main/default/objects/Demand__c/fields/Letter_for_Cancellation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_for_Cancellation_Start_Date__c</fullName>
    <formula>Demand_Letter_Generation__c + 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Letter for Cancellation Start Date</label>
    <type>Date</type>
</CustomField>