dynamix/force-app/main/default/objects/Demand__c/fields/NOTICE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>NOTICE_TYPE__c</fullName>
    <label>NOTICE_TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demand Cum PreCancellation</fullName>
            </value>
            <value>
                <fullName>Demand Notice</fullName>
            </value>
            <value>
                <fullName>Impact Area Change</fullName>
            </value>
            <value>
                <fullName>Multi Installment</fullName>
            </value>
            <value>
                <fullName>Possession Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>