dynamix/force-app/main/default/objects/Demand__c/fields/OOP_1_Sent__c.field-meta.xml
<CustomField>
    <fullName>OOP_1_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OOP 1 Sent</label>
    <type>Checkbox</type>
</CustomField>