dynamix/force-app/main/default/objects/Demand__c/fields/OOP_Demand__c.field-meta.xml
<CustomField>
    <fullName>OOP_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OOP Demand</label>
    <type>Checkbox</type>
</CustomField>