dynamix/force-app/main/default/objects/Demand__c/fields/OUTSTANDING__c.field-meta.xml
<CustomField>
    <fullName>OUTSTANDING__c</fullName>
    <label>OUTSTANDING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>