dynamix/force-app/main/default/objects/Demand__c/fields/Payment_Milestone_Ids__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestone_Ids__c</fullName>
    <label>Payment Milestone Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>