dynamix/force-app/main/default/objects/Demand__c/fields/Pending_GST__c.field-meta.xml
<CustomField>
    <fullName>Pending_GST__c</fullName>
    <formula>GST_Calculated__c - GST_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>