dynamix/force-app/main/default/objects/Demand__c/fields/PM_DEMAND_HDR_ID__c.field-meta.xml
<CustomField>
    <fullName>PM_DEMAND_HDR_ID__c</fullName>
    <externalId>true</externalId>
    <label>PM_DEMAND_HDR_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>