dynamix/force-app/main/default/objects/Demand__c/fields/PREV_TAX__c.field-meta.xml
<CustomField>
    <fullName>PREV_TAX__c</fullName>
    <label>PREV_TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>