dynamix/force-app/main/default/objects/Demand__c/fields/Project_Location_For_MT__c.field-meta.xml
<CustomField>
    <fullName>Project_Location_For_MT__c</fullName>
    <formula>Text(Booking__r.Project_Name__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Location For MT</label>
    <type>Text</type>
</CustomField>