dynamix/force-app/main/default/objects/Demand__c/fields/Project_Name_For_MT__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_For_MT__c</fullName>
    <formula>Booking__r.Project_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name For MT</label>
    <type>Text</type>
</CustomField>