dynamix/force-app/main/default/objects/Demand__c/fields/Reminder1_Start_Date_15_days__c.field-meta.xml
<CustomField>
    <fullName>Reminder1_Start_Date_15_days__c</fullName>
    <formula>CreatedDate + 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reminder1 Start Date +15 days</label>
    <type>Date</type>
</CustomField>