dynamix/force-app/main/default/objects/Demand__c/fields/Reminder1_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder1_Start_Date__c</fullName>
    <formula>CreatedDate  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Reminder1 Start Date</label>
    <type>Date</type>
</CustomField>