dynamix/force-app/main/default/objects/Demand__c/fields/Reminder2_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder2_Start_Date__c</fullName>
    <formula>Demand_Letter_Generation__c + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Reminder2 Start Date</label>
    <type>Date</type>
</CustomField>