dynamix/force-app/main/default/objects/Demand__c/fields/Reminder_1_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder 1 Sent</label>
    <type>Checkbox</type>
</CustomField>