dynamix/force-app/main/default/objects/Demand__c/fields/REPORT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>REPORT_STATUS__c</fullName>
    <label>REPORT_STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>