dynamix/force-app/main/default/objects/Demand__c/fields/SALEABLE_AREA__c.field-meta.xml
<CustomField>
    <fullName>SALEABLE_AREA__c</fullName>
    <label>SALEABLE_AREA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>