dynamix/force-app/main/default/objects/Demand__c/fields/SALEABLE_AREA_SMT__c.field-meta.xml
<CustomField>
    <fullName>SALEABLE_AREA_SMT__c</fullName>
    <label>SALEABLE_AREA_SMT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>