dynamix/force-app/main/default/objects/Demand__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <inlineHelpText>DD/MM/YYYY</inlineHelpText>
    <label>Sent Date</label>
    <type>Date</type>
</CustomField>