dynamix/force-app/main/default/objects/Demand__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <formula>GST_Calculated__c /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>