dynamix/force-app/main/default/objects/Demand__c/fields/TDS_Charges_SAP__c.field-meta.xml
<CustomField>
    <fullName>TDS_Charges_SAP__c</fullName>
    <label>TDS Charges (SAP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>