dynamix/force-app/main/default/objects/Demand__c/fields/Today_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_Date__c</fullName>
    <formula>if( DAY(Today()) &lt; 10, &apos;0&apos;+TEXT(DAY(Today())) ,TEXT(DAY(Today())) )+&quot;/&quot; +if( MONTH(Today()) &lt; 10, &apos;0&apos;+TEXT(MONTH(Today())) ,TEXT(MONTH(Today())) ) +&quot;/&quot;+TEXT(YEAR(Today()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Date</label>
    <type>Text</type>
</CustomField>