dynamix/force-app/main/default/objects/Demand__c/fields/Total_Amount_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Calculated__c</fullName>
    <formula>Total_Amount__c - (Credit_s_Received_Amount__c +  Credit_s_Received_GST_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>