dynamix/force-app/main/default/objects/Demand__c/fields/Total_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Received__c</fullName>
    <label>Total Amount Received</label>
    <summarizedField>Invoice__c.Total_Payment_Received__c</summarizedField>
    <summaryForeignKey>Invoice__c.Demand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>