dynamix/force-app/main/default/objects/Demand__c/fields/Total_Amount_SAP__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_SAP__c</fullName>
    <label>Total Amount (SAP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>