dynamix/force-app/main/default/objects/Demand__c/fields/Total_Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending_Amount__c</fullName>
    <formula>Pending_Amount__c +  Pending_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>