dynamix/force-app/main/default/objects/Demand__c/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <formula>Booking__r.Related_Suggested_Property__r.Unit__r.Tower__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower Name</label>
    <type>Text</type>
</CustomField>