dynamix/force-app/main/default/objects/Demand__c/fields/Unit_Number_for_MT__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number_for_MT__c</fullName>
    <formula>Booking__r.Related_Suggested_Property__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Number for MT</label>
    <type>Text</type>
</CustomField>