dynamix/force-app/main/default/objects/Demand__c/fields/Whatsapp_No__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_No__c</fullName>
    <label>Whatsapp No.</label>
    <type>Phone</type>
</CustomField>