dynamix/force-app/main/default/objects/Demand__c/fields/X10_Of_Booking_Amt__c.field-meta.xml
<CustomField>
    <fullName>X10_Of_Booking_Amt__c</fullName>
    <formula>Booking__r.Total_Amount__c  * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10 Percent Of Total Booking Amount</inlineHelpText>
    <label>10 % Of Booking Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>